versioned_docs/version-0.7.7/faq/faq-troubleshooting.mdx
---
title: Troubleshooting
# tags:
# -
pagination_next: null
pagination_prev: null
description: "FAQ related to user-side troubleshooting of common issues"
---

import InputLabelSelector, {
  Hotkey,
} from "@site/src/components/LabelSelector.tsx";
import HotkeyNote from "../snippets/_hotkey-note.mdx";

Select the button labels to be displayed in the usage guide:

<InputLabelSelector />

## Input Issues

### Why are my buttons out of order?

There are many different reasons why this could be the case.

#### Incorrect Mapping in Steam

Verify that your controller settings in Steam are correctly set, both global settings and the per-game settings. See [Steam Support](https://partner.steamgames.com/doc/features/steam_controller/getting_started_for_players) for more information on how to resolve this issue.

#### Incorrect Input Mode

Verify that you are using the correct input mode as different modes may swap the mapping of inputs (e.g. Switch vs XInput, PS3/PS4, etc). See [GP2040-CE Usage](../usage.mdx#input-modes) for more information on how to change input modes.

#### Incorrect Button Wiring

Verify that your buttons are correctly connected to the controller board according to the GPIO pin mapping provided by the vendor of your controller board.

#### Incorrect Firmware

Firmware is built to assume a specific GPIO pin out and there may be a mismatch between what the firmware expects and what you expect the controls to be. You can either update the GPIO pin mappings in the [Web Configurator](../web-configurator/menu-pages/02-pin-mapping.mdx) or install the correct firmware onto this device.

See [Incorrect Firmware](#incorrect-firmware-for-a-supported-device) below for more information on how to resolve this issue.

### Why does my button not register when I press it?

Check your wiring. The button should have two terminals where one side goes to the GPIO pin and the other to ground. Test whether wiring is working properly by touching the wires together and verifying that an input is received.

There might also be an issue with your button. Try using different buttons.

### Why do I keep getting an input even though the button is not being pressed?

Check your wiring. There may be an unintended short where the signal wire is in contact with ground (GND) or a wire connected to GND.

There might also be an issue with your button. Try using different buttons.

### Up/Down or Left/Right have been swapped. How do I fix this?

You've likely activated [Invert Y-Axis](../hotkeys.mdx#invert-y-axis) or [Invert X-Axis](../hotkeys.mdx#invert-x-axis) hotkey on your controller. Activate the hotkey again to disable the feature.

<HotkeyNote />

### My SOCD cleaning changed. How do I get it back to X cleaning mode?

You've likely activated one of the following SOCD cleaning mode hotkeys on your controller. Activate the hotkey again to disable the feature.

- [SOCD Up Priority](../hotkeys.mdx#socd-up-priority)
- [SOCD Neutral](../hotkeys.mdx#socd-neutral)
- [SOCD Last Win](../hotkeys.mdx#socd-last-win)
- [SOCD First Wins](../hotkeys.mdx#socd-first-wins)
- [SOCD Cleaning Off](../hotkeys.mdx#socd-cleaning-off)

<HotkeyNote />

### Why is my DPad stuck outputting directions on the Left/Right Analog Joystick?

You've likely activated [DPad Left Analog](../hotkeys.mdx#dpad-left-analog) or [DPad Right Analog](../hotkeys.mdx#dpad-right-analog) hotkey on your controller. Activate the hotkey again to disable the feature.

<HotkeyNote />

## Connection Issues

### Why is the controller connected to the PC/Console not being recognized?

There are a number of reasons this could be happening. Check for the following issues.

#### Keyboard Mode

Check that the input mode of the device is not in keyboard mode. This will cause your computer to only recognize your controller as a keyboard and not as a gamepad.

#### Web Configurator

When booting into the Web Configurator, the controller initializes as a RNDIS device and will not be recognized by the PC/Console as a controller. Check that the controller is not booting into the Web Configurator and <Hotkey buttons={["S2"]}/> is not being activated while booting.

### Why does my controller not connect to the PC/console when using a USB Type C-C?

Depending on how your device hardware is designed, it may not be set up to use a reversible USB Type C. Try reversing the cable. If that does not work, try using a USB 2.0 Type C-C cable or a USB 2.0 Type C-A cable with an adapter.

### Why does my controller stop responding on Playstation 4 or Playstation 5?

Regarding PS4 disconnection issues, verify that you have the [PS4 Mode](../add-ons/ps4-mode.mdx) add-on is enabled with valid authentication files or the [PS Passthrough](../add-ons/ps-passthrough.mdx) add-on is enabled with a valid passthrough authentication device.

Regarding PS5 disconnection issues. [PS Passthrough](../add-ons/ps-passthrough.mdx) add-on is enabled with a valid passthrough authentication device.

For more information, refer to the [PS4/PS5 Compatibility FAQ](../faq/faq-console-compatibility.mdx).

### Why can't I access the Web Configurator?

#### Controller is not booting into Web Configurator Mode

If the Web Configurator page is timing out, verify that the controller is booting into Web Configurator Mode.

:::info How to get into Bootsel Mode

- Holding the BootSel button while plugging in
- Holding <Hotkey buttons={["S1", "S2", "Up"]} /> while plugging in
- Holding <Hotkey buttons={["S1", "B3", "B4"]} /> for 5 seconds.

:::

Test that you are holding correct buttons, using a using the website like [Gamepad Tester](https://gamepad-tester.com/), or in another application such as the Steam Input Overlay. to verify that you are pressing the correct button.

#### Another device on your network has the IPV4 address of 192.168.7.1

If another device (e.g. router, managed switch/hub, IoT device, etc.) is on the network and has the same IP address, the web configurator will not be able to access the Web Configurator dur to IP conflicts.

Disconnect your computer from your local network (e.g. unplug the ethernet cable) and then attempt to access the Web Configurator again.

## Configuration Issues

### Why does PS Passthrough not work on my device?

#### Did not press <Hotkey buttons={["A1"]} /> after connecting the controller.

After connecting a controller that is correctly configured for PS Passthrough, you need to press <Hotkey buttons={["A1"]} /> in order to have the PS4 or PS5 register the controller. Once you have done so, the console should now properly receive inputs from the controller.

#### The controller mode is incorrectly configured.

If you have PS Passthrough enabled, you must turn off the `PS4 Mode` add-on as the two will not work together.

Ensure that, under the `Settings` section, you have set the input mode as `PS4` and the `Controller Mode` as `Arcade Stick`. The PS Passthrough add-on will not work otherwise.

For more information, refer to the [PS Passthrough](../add-ons/ps-passthrough.mdx) add-on documentation.

#### USB Host Port not configured correctly

Verify that your USB host port is correctly configured in the Web Configurator under [Peripheral Mapping](/docs/web-configurator/menu-pages/03-peripheral-mapping.mdx#usb-host). The specific pins for Data+ and Data- may differ between devices and device manufacturers so check with the documentation provided by the vendor.

#### Incompatible Controller/Dongle is being used

Only compatible devices will allow the use of a GP2040-CE controller with PS Passthrough to work on PS4 and not all devices will work with PS5.

For more information, refer to the [PS4/PS5 Compatibility FAQ](../faq/faq-console-compatibility.mdx).

### I don't have a <Hotkey buttons={["S2"]} /> button and cannot get to WebConfig using the shortcuts. How do I get to the Web Configurator?

**_Without flash nuking your device_**, flash this [firmware file](../downloads/force_webconfig.uf2) using the [firmware installation](../installation.mdx) instructions. This will force your device to reboot into Web Configurator mode.

### Why are my RGB LEDs the wrong color?

Verify that the `LED Format` is correctly set as different LEDs may have a different order to the Red, Green, and Blue data being sent.

For more information, refer to the [RGB LED Button Order](../web-configurator/menu-pages/05-led-configuration.mdx#rgb-led-button-order) section of the Web Configurator menu.

### Why are my RGB LEDs out of order?

The order of RGB LEDs can be set in the Web Configurator and the correct configuration is determined by the hardware, how the user wires up the LED chain or the device designer set the LED chain on the board.

For more information, refer to the [RGB LED Button Order](../web-configurator/menu-pages/05-led-configuration.mdx#rgb-led-button-order) section of the Web Configurator menu.

### When I updated my device, why did my controller stop working?

If you updated your device and suddenly your inputs aren't correct and your OLED Display or RGB LED stopped working, it's likely that the incorrect compiled firmware was flashed onto your device or your device is not supported and thus the precompiled builds on the [Downloads](../downloads/download-page.mdx) page may not work for your device.

#### Incorrect Firmware for a Supported Device

If your device is supported and the incorrect firmware was flashed, follow the [firmware installation](../installation.mdx) instructions and reflash the correct firmware, verifying that the name of the firmware file matches your device.

#### Unsupported Devices

If your device is not supported, please speak with the vendor you purchased the device from for the proper firmware file to flash onto your device using the [firmware installation](../installation.mdx) instructions.

If your vendor is incapable of supporting their device, you will need to perform some investigative work to properly set up your device.

1. Flash the compiled **Pico** GP2040 firmware from the downloads page using the [firmware installation](../installation.mdx) instructions.
2. Repeat those steps **_without flash nuking your device_**, flashing this [firmware file](../downloads/force_webconfig.uf2). This will force your device to boot into Web Configurator mode on boot.
3. Go to Configuration>Pin Mapping
4. For each gamepad input, use the “Press Button to Map” feature to map the input to a GPIO Pin connected to that button. Repeat for all inputs
5. For any additional features (e.g. RGB LED, OLED display, USB Host Port, etc.), you will need to determine what GPIO pin is associated. This can be done by tracing physical copper paths on the PCB to the button/component.

No further assistance can be supplied as this last step is entirely determined by the manufacturer and how they designed the PCB, which is unsupported.
